kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-starter-api
  namespace: devops-starter
  labels:
    app: devops-starter-api
spec:
  selector:
    app: devops-starter-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
